--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<div class="col">
 					<div class="name2">
 						<div class="image">
-							<img src="Pathik.png" alt="">
+							<img src="bhavika.png" alt="">
 							<div class="icon">
                                 <i class="fab fa-github"></i>
 							</div>
@@ -86,7 +86,7 @@
                 <div class="col">
 					<div class="name2">
 						<div class="image">
-							<img src="priyam (1).png" alt="">
+							<img src="ashmeet.png" alt="">
 							<div class="icon">
 								<i class="fab fa-github"></i>
 							</div>
@@ -103,25 +103,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col">
-					<div class="name2">
-						<div class="image">
-							<img src="Nishtha.png" alt="">
-							<span class="icon">
-								<i class="fab fa-github"></i>
-							</span>
-						</div>
-						<div class="info">
-							<h3 class="name">Nishtha Chaudhari</h3>
-							<span class="head1">Incoming SDE @Foogle</span>
-							<!-- <p>You can relay on our amazing features list and also our customer services will be great experience.</p> -->
-							<ul class="follow-us">
-								<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>&nbsp;&nbsp;</a>
-								<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;&nbsp;</a>
-								<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;&nbsp;</a>
-							  </ul>
-						</div>
-					</div>
+				
 				</div>
 			</div>
 		</div>
