--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col">
                     <div class="name2">
                         <div class="image">
-                            <img src="yash.png" alt="">
+                            <img src="blank.png" alt="">
                             <div class="icon">
                                 <i class="fab fa-github"></i>
                             </div>
@@ -63,7 +63,7 @@
                 <div class="col">
                     <div class="name2">
                         <div class="image">
-                            <img src="ujjaval.png" alt="">
+                            <img src="blank.png" alt="">
                             <div class="icon">
                                 <i class="fab fa-github"></i>
                             </div>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="info">
                             <h3 class="name">Ashmeet Singh</h3>
-                            <span class="head1">Incoming SDE @Choogle</span>
+                            <span class="head1">Incoming SDE</span>
                             <ul class="follow-us">
                                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>&nbsp;&nbsp;</a>
                                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;&nbsp;</a>
