--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col">
                     <div class="name2">
                         <div class="image">
-                            <img src="blank.png" alt="">
+                            <img src="udhav.png" alt="">
                             <div class="icon">
                                 <i class="fab fa-github"></i>
                             </div>
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                         <div class="info">
-                            <h3 class="name">Bhavika Bansal</h3>
+                            <h3 class="name">Bhavika</h3>
                             <span class="head1">Full-stack Developer</span>
                             <ul class="follow-us">
                                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>&nbsp;&nbsp;</a>
@@ -63,7 +63,7 @@
                 <div class="col">
                     <div class="name2">
                         <div class="image">
-                            <img src="blank.png" alt="">
+                            <img src="hitesh.png" alt="">
                             <div class="icon">
                                 <i class="fab fa-github"></i>
                             </div>
